--- a/Prueba.API/Prueba.API.csproj
+++ b/Prueba.API/Prueba.API.csproj
@@ -1,11 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Prueba.API\Prueba.API.csproj" />
     <ProjectReference Include="..\Prueba.Entities\Prueba.Entities.csproj" />
   </ItemGroup>
 
